--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,11 @@ phases:
   install:
     commands:
     # Install dependencies needed for running tests
-    - npm --version
-    - npm install
+    # - npm --version
+    # - npm install
 
     # Prevent files from having a timestamp before 1980
-    - find ./node_modules -mtime +10950 -exec touch {} \;
+    # - find ./node_modules -mtime +10950 -exec touch {} \;
 
 
     # Upgrade AWS CLI to the latest version
