Added s3 sync to worklog.fyp.robertcurran.uk
 Changes to be committed:
	modified:   buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
     commands:
     # Use AWS SAM to package the application using AWS CloudFormation
     - aws --version
+    - aws s3 sync .  s3://worklog.fyp.robertcurran.uk
 # artifacts:
 #   type: zip
 #   files:
